fix: sticky hover state on mobile devices

--- a/src/app/components/events/event-filter/event-filter.component.scss
+++ b/src/app/components/events/event-filter/event-filter.component.scss
@@ -60,9 +60,11 @@ h2 {
     cursor: pointer;
     padding: 2px 6px;
 
-    &:hover {
-        border-color: var(--accent);
-        color: var(--accent);
+    @media (hover: hover) {
+        &:hover {
+            border-color: var(--accent);
+            color: var(--accent);
+        }
     }
 }
 
